Tests/CompilerTests/negative/invalid-modifier-2.hylo
//! no-std

// Invalid access and indirect modifiers are diagnose after parsing.

trait P {
  public fun f()
}
