Tests/CompilerTests/negative/invalid-modifier-2.expected
negative/invalid-modifier-2.hylo:6.3-9: error: cannot apply access modifiers on trait requirements
  public fun f()
  ~~~~~~
